paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_8/sample_003/target.compile.log
error[E0369]: binary operation `==` cannot be applied to type `Option<Rc<S>>`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_8/sample_003/target.rs:22:7
   |
22 |     p == q && q.as_ref().unwrap().i == 1
   |     - ^^ - Option<Rc<S>>
   |     |
   |     Option<Rc<S>>
   |
note: an implementation of `PartialEq` might be missing for `S`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_8/sample_003/target.rs:4:1
   |
 4 | struct S {
   | ^^^^^^^^ must implement `PartialEq`
help: consider annotating `S` with `#[derive(PartialEq)]`
   |
 4 + #[derive(PartialEq)]
 5 | struct S {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.